<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/txt_quesion"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:text="@string/first_question"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:id="@+id/anser_container"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp"
            android:paddingRight="20dp">


            <TextView
                android:text="@string/option_1"
                android:id="@+id/ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/option_back"/>

            <TextView
                android:text="@string/option_2"
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/option_back" />

            <TextView
                android:text="@string/option_3"
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/option_back" />

            <TextView
                android:text="@string/option_4"
                android:id="@+id/ans4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/option_back" />
        </LinearLayout>


        <TextView
            android:id="@+id/txt_next"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@android:color/white"
            android:background="@drawable/option_back"
            android:padding="7dp"
            android:text="Next"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>